# rust-webrtc-demo

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
src/: main.rs  sfu.rs
src/sfu/: api.rs  media.rs  signal.rs
