[package]
name = "sfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = { path = "../webrtc" }
flume = "0.10.12"
tokio = { version = "1.15.0", features = ["full", "tracing"] }
env_logger = "0.9.0"
clap = "3.0.8"
tokio-util = "0.6.9"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
bytes = "1.1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
anyhow = "1.0.52"
base64 = "0.13.0"
hyper = { version = "0.14.16", features = ["full"] }
hyper-tungstenite = "0.6.0"
futures = "0.3"
console-subscriber = "0.1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
